# FraudShield_AI

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_prediction.py  test_risk.py  test_rules.py
config/: model_config.py  risk_config.py  rules_config.py
data/: FraudShield_Transactions_ML_Training.csv
models/: logistic_model.pkl  xgboost_model.pkl
src/: config.py  data_loader.py  evaluation.py  model_utils.py  validation.py
src/analysis/: eda.py  feature_analysis.py  feature_importance.py  visualization.py
src/api/: app.py  routes.py  schemas.py
src/assistants/: fraud_assistant.py
src/engines/: risk_engine.py  rule_engine.py
src/llm/: openai_client.py  prompts.py
src/models/: logistic_model.py  random_forest_model.py  xgboost_model.py
src/pipeline/: dataset_builder.py  preprocessing.py  train_test.py
src/services/: fraud_detector.py  predict.py
tests/: test_fraud_detector.py
