[project]
name = "pythonproject1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "protobuf>=7.35.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
]
